linked files stored locally

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -40,8 +40,7 @@
     width: 320px;
     height: 320px;  
 }
-
-/*.table-stroke tr{
-    border-top: 1px solid black;
-}*/
+#pages{
+    text-align: center;
+}
 
